Remove TFile. Move time series to litedb. Add compression.

--- a/IoTDB.NET.csproj
+++ b/IoTDB.NET.csproj
@@ -15,4 +15,8 @@
     <None Remove="SystemTables\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
